# src/characters/rickandmortys.model.js
@@ -2,7 +2,7 @@ const mongooose = require('mongoose');
 
 const rickandmortysSchema = new mongooose.Schema({
   name: { type: String, required: true },
-  image: { type: String, required: true },
+  imageUrl: { type: String, required: true },
 });
 
 const rickandmortys = mongooose.model('rickandmortys', rickandmortysSchema);
