# src/users/users.model.js
@@ -2,11 +2,11 @@ const mongooose = require('mongoose');
 const bcrypt = require('bcryptjs');
 
 const UsersSchema = new mongooose.Schema({
-  nome: { type: String, require: true },
-  usuario: { type: String, require: true, unique: true },
+  name: { type: String, require: true },
+  username: { type: String, require: true, unique: true },
   email: { type: String, require: true, unique: true, lowercase: true },
   password: { type: String, require: true, select: false },
-  foto: { type: String, required: true },
+  photo: { type: String, required: true },
 });
 
 UsersSchema.pre('save', async function (next) {
