# swagger.json
@@ -34,11 +34,11 @@
               "examples": {
                 "Users": {
                   "value": {
-                    "nome": "Iuri Dantas",
-                    "usuario": "IuriDantas",
+                    "name": "Iuri Dantas",
+                    "username": "IuriDantas",
                     "email": "uri.dantas@hotmail.com",
                     "password": "blueedtech",
-                    "foto": "https://avatars.githubusercontent.com/u/88010013?v=4"
+                    "photo": "https://avatars.githubusercontent.com/u/88010013?v=4"
                   }
                 }
               }
@@ -226,7 +226,7 @@
                 "Rickandmortys": {
                   "value": {
                     "name": "Annie",
-                    "image": "https://rickandmortyapi.com/api/character/avatar/17.jpeg"
+                    "imageUrl": "https://rickandmortyapi.com/api/character/avatar/17.jpeg"
                   }
                 }
               }
@@ -279,7 +279,7 @@
                 "Paletas": {
                   "value": {
                     "name": "Annie Editado",
-                    "image": "https://rickandmortyapi.com/api/character/avatar/17.jpeg"
+                    "imageUrl": "https://rickandmortyapi.com/api/character/avatar/17.jpeg"
                   }
                 }
               }
@@ -387,7 +387,7 @@
           "name": {
             "type": "string"
           },
-          "image": {
+          "imageUrl": {
             "type": "string"
           }
         }
@@ -395,10 +395,10 @@
       "Users": {
         "type": "object",
         "properties": {
-          "nome": {
+          "name": {
             "type": "string"
           },
-          "usuario": {
+          "username": {
             "type": "string"
           },
           "email": {
@@ -407,7 +407,7 @@
           "password": {
             "type": "string"
           },
-          "image": {
+          "photo": {
             "type": "string"
           }
         }
